<resources>

    <string name="app_name">Bookstore Inventory</string>

    <string name="modify_activity_title_new_book">Add a Book</string>

    <string name="detail_activity_title_book_details">Book details</string>

    <string name="save">Save</string>

    <string name="delete">Delete</string>

    <string name="add">Add a book to the inventory</string>

    <string name="parameter_name">Name</string>

    <string name="parameter_quantity">Quantity</string>

    <string name="parameter_price">Price</string>

    <string name="parameter_supplier_name">Supplier Name</string>

    <string name="parameter_supplier_phone_number">Supplier Phone</string>

    <string name="hint_book_name">Name (required)</string>

    <string name="hint_book_price">Price (required)</string>

    <string name="hint_book_quantity">Quantity (required)</string>

    <string name="book_quantity_unit">pcs</string>

    <string name="book_price_unit">$</string>

    <string name="supplier_unknown">Unknown(required)</string>

    <string name="supplier_readwell">Readwell</string>

    <string name="supplier_goodbooks">Goodbooks</string>

    <string name="supplier_fictionfans">Fictionfans</string>

    <string name="supplier_bookhouse">Bookhouse</string>

    <string name="phonenumber_none">Supplier phone number (required)</string>

    <string name="phonenumber_readwell">361123456</string>

    <string name="phonenumber_goodbooks">362345678</string>

    <string name="phonenumber_fictionfans">363456789</string>

    <string name="phonenumber_bookhouse">363567891</string>

    <string name="modify_insert_book_successful">Book saved</string>

    <string name="modify_insert_book_failed">Error: could not save book</string>

    <string name="startup_view_title">Welcome to the bookstore inventory</string>

    <string name="startup_view_subtitle">Add a book</string>

    <string name="modify_activity_title">Modify Book</string>

    <string name="modify_updation_successful">Book properties updated</string>

    <string name="modify_updation_failed">Error: could not update book properties</string>

    <string name="unsaved_changes">Do you want to quit and discard all changes?</string>

    <string name="discard_changes">Discard changes</string>

    <string name="continue_editing">Continue editing</string>

    <string name="modify_deletion_successful">Book deletion successful</string>

    <string name="modify_deletion_failed">Error: book deletion failed</string>

    <string name="delete_book">Do you want to delete this book?</string>

    <string name="delete_confirmation">Delete book?</string>

    <string name="cancellation">Cancel</string>

    <string name="unknown_book_name">Unknown book name</string>

    <string name="unknown_book_price">Unknown book price</string>

    <string name="unknown_book_quantity">Unknown book quantity</string>

    <string name="create_template">Create book template</string>

    <string name="delete_all">Delete all books</string>

    <string name="book_sold">Sale</string>

    <string name="edit">Edit</string>

    <string name="book_insertion_success">Book successfully inserted</string>

    <string name="book_insertion_failed">Book insertion failed</string>

    <string name="book_update_success">Book successfully updated</string>

    <string name="book_update_failed">Book update failed</string>

    <string name="increase">+</string>

    <string name="decrease">-</string>

    <string name="no_more_books">No more left from the following book:</string>

    <string name="call_button_text">Call</string>

    <string name="details_button">Details</string>

    <string name="edit_item">Edit item</string>

    <string name="details_item">Details view</string>

    <string name="outofstock">Book out of stock, new order necessary!</string>

    <string name="empty">&#032;</string>

    <string name="look_up">Search</string>

    <string name="search_book">Search book online</string>

    <string name="done">Done</string>

    <string name="add_author">Add author or other information to the book name</string>

    <string name="continue_without_saving">Continue without saving</string>

    <string name="continue_with_unsaved_changes">Do you want to continue without saving?</string>

    <string name="template_created">Book template has been created!</string>

    <string name="delete_inventory">All books have been deleted!</string>

    <string name="inventory_delete_confirmation">Do you want to delete all books in the inventory?</string>

    <string name="no_more_books_in_detail">No more book left on stock!</string>


</resources>
